--- a/admin_back/templates/admin_back/password_reset.html
+++ b/admin_back/templates/admin_back/password_reset.html
@@ -28,6 +28,11 @@
                 <a class="subMenu1" href="http://127.0.0.1:8000/admin/"><span>Login</span></a>
               </li>
             </ul>
+              <ul class="subMenuHighlight panel-heading">
+              <li class="subMenuHighlight panel-title" id="subMenuHighlight">
+                <a id="123" class="subMenuHighlight" href="http://127.0.0.1:8000/admin/update_profile/"><span>Edit User Profile</span></a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
