--- a/admin_back/templates/admin_back/update_profile.html
+++ b/admin_back/templates/admin_back/update_profile.html
@@ -4,17 +4,15 @@
 
  <!--text box -->
 <div class="container" style="width: 400px">
-  <h1>Create User</h1>
-    <p>All Fields Required</p>
+  <h1>Edit User Profile</h1>
     <form method="POST" action="">
         {% csrf_token %}
-
              <div class="form-group">
                 <label for="{{ form.first_name.id_for_label_tag}}">
                     {{ form.first_name.label }}
                 </label>
                  <input type="text" id="{{ form.first_name.id_for_label }}"
-                            name="{{ form.first_name.html_name }}"
+                            name="{{ form.first_name.request.user }}"
                                 {% if form.first_name.field.required %}required{% endif %}
                                      class="form-control{% if form.first_name.errors %} is-invalid{% endif %}"
                                         value="{% if form.first_name.value %}{{ form.first_name.value }}
@@ -90,54 +88,15 @@
                      <span class="invalid-feedback">{{ err }}</span>
                  {% endfor %}
              </div>
-                 <div class="form-group">
-                <label for="{{ form.password1.id_for_label_tag}}">
-                    {{ form.password1.label }}
-                </label>
-                 <input type="password" id="{{ form.password1.id_for_label }}"
-                            name="{{ form.password1.html_name }}"
-                                {% if form.password1.field.required %}required{% endif %}
-                                     class="form-control{% if form.password1.errors %} is-invalid{% endif %}"
-                                        value="{% if form.password1.value %}{{ form.password1.value }}
-                                {% endif %}">
-                                {% if form.password1.help_text %}
-                                    <small class="text-muted">
-                                        {{ form.password1.help_text }}
-                                    </small>
-                                {% endif %}
-
-                 {% for err in form.password1.errors %}
-                     <span class="invalid-feedback">{{ err }}</span>
-                 {% endfor %}
-             </div>
-                 <div class="form-group">
-                <label for="{{ form.password2.id_for_label_tag}}">
-                    {{ form.password2.label }}
-                </label>
-                 <input type="password" id="{{ form.password2.id_for_label }}"
-                            name="{{ form.password2.html_name }}"
-                                {% if form.password2.field.required %}required{% endif %}
-                                     class="form-control{% if form.password2.errors %} is-invalid{% endif %}"
-                                        value="{% if form.password2.value %}{{ form.password2.value }}
-                                {% endif %}">
-                                {% if form.password2.help_text %}
-                                    <small class="text-muted">
-                                        {{ form.password2.help_text }}
-                                    </small>
-                                {% endif %}
-
-                 {% for err in form.password2.errors %}
-                     <span class="invalid-feedback">{{ err }}</span>
-                 {% endfor %}
-             </div>
-
+    <!--
              <script src='https://www.google.com/recaptcha/api.js'></script>
             <div style="text-align: center">
                 <div class="g-recaptcha" style="display: inline-block; padding-top: 10px" data-sitekey="6LdlyvIZAAAAAIKi5VQNWD53kskKuzUW5dB9Vfwj" tabindex=3></div>
             </div>
 
+-->
+        <input type="submit" name="Update User" class="btn btn-primary">
 
-        <input type="submit" name="Create User" class="btn btn-primary">
     </form>
 </div>
 
