Added Bootstrap JS to support Bootstrap 4 dropdowns and fixed dropdown menu in header.

--- a/admin_back/templates/admin_back/base.html
+++ b/admin_back/templates/admin_back/base.html
@@ -12,8 +12,11 @@
         <link href= "{% static 'admin_back/base.css'%}" rel="stylesheet">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         {% endblock %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </head>
 
     <body>
@@ -27,19 +30,10 @@
                 </div>
             </a>
 
-
             {% if user.is_authenticated %}
                 <div class="top-banner">
 
-                    <div class="btn-group dropleft">
-                        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Hello, {{ request.user }}
-                        </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="http://127.0.0.1:8000/admin/registration/">Add User</a>
-                                    <a class="dropdown-item" href="http://127.0.0.1:8000/admin/update_profile/">Edit User Profile</a>
-                                </div>
-                    </div>
+
                    <!-- <a class ="top-banner" style="font-size: 20px;text-decoration: none ; white-space: nowrap";>Hello, {{ request.user }}</a>
                     -->
                     <a class="top-banner" style="font-size: 20px; text-decoration: none" href="/admin/dashboard">
@@ -49,11 +43,22 @@
                     <a class="top-banner" style="font-size: 20px; text-decoration: none; white-space: nowrap" href="{% url 'logout' %}">
                         SIGN OUT
                     </a>
+                     <div class="dropdown" style="position: static;">
+                             <button class="btn btn-warning dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Hello, {{ request.user }}
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="/admin/registration/">Add User</a>
+                                <a class="dropdown-item" href="/admin/update_profile/">Edit User Profile</a>
+                            </div>
+                    </div>
                 </div>
             {% endif %}
         </nav>
 
     {% block content %}
     {% endblock content %}
+
+
     </body>
 </html>
